# blokaid-projesi

./: .gitattributes  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: devcontainer.json  post-create.sh
backend/: .env.example  README.md  jest.config.js  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: FAQ_FOR_JURY.md  README_RELEASE.md  WalletButton.tsx  auth.routes.ts  collection.json  donation_pool.test.ts  index.ts  seed.ts  singleton.ts  umiMint.ts
contracts/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
contracts/programs/donation_pool/: Cargo.toml
contracts/tests/: blokaid.ts  donation_pool.ts
frontend/: .env.example  Footer.tsx  README.md  index.html  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  Cargo.toml  DEMO-RUNBOOK.md  LoginPage.tsx  README.md  RegisterPage.tsx  SECURITY_NOTE.md  WalletContextProvider.tsx  anchorClient.ts  auth.controller.ts  donationsSlice.ts  index.css  main.tsx  nft_tracker.test.ts
frontend/src/store/: DEMO-RUNBOOK.md  DEMO_VIDEO_STORYBOARD.md  DashboardPage.tsx  Header.tsx  ProtectedRoute.tsx  README_RELEASE.md  auth.test.ts  authSlice.ts  ci-smoke.sh  dev.sh  donation_pool.test.ts  errors.ts  jwt.ts  packagesSlice.ts  store.ts  useAnchor.ts
infra/: README.md  backend.dockerfile  docker-compose.yml  frontend.dockerfile  nginx.conf  nginx.dockerfile
scripts/: ci-smoke.sh  deploy.js  dev.sh  devnet-deploy.sh  e2e-demo.sh  setup-dev.sh  setup-env.js
(+16 files in other folders)
